Disable 'Save' buttons after click

Since the ContactEditor and ContactGroupEditor might need some
time to finish saving, we should prevent the user from clicking
save multiple times, otherwise the contact (group) is created multiple
times as well.

BUG: 263554